# SadieFish

./: Cargo.toml  README.md  readme.md
.github/workflows/: apisec-scan.yml
src/: lib.rs
src/encryption/: aes.rs  caesar.rs  des.rs  mod.rs  vigenere.rs
src/utils/: base64.rs  hex.rs  mod.rs  rand.rs
tests/: encryption_tests.rs  integration_tests.rs  unit_tests.rs
