[package]
name = "SadieFish"
version = "0.1.0"
edition = "2023"
description = "A Rust cryptography library for educational purposes"

[dependencies]
rand = "0.8.4"
aes = "0.9.0"

[dev-dependencies]
doc-comment = "0.3.3"

[features]
default = []
caesar = ["SadieFish/encryption/caesar"]
vigenere = ["SadieFish/encryption/vigenere"]
aes = ["SadieFish/encryption/aes"]
des = ["SadieFish/encryption/des"]
base64 = ["SadieFish/utils/base64"]
hex = ["SadieFish/utils/hex"]
rand = ["SadieFish/src/utils/rand"]

[workspace]

[build-dependencies]
sadiefish = { path = "." }
