[package]
name = "SadieFish"
version = "0.1.0"
edition = "2018"
description = "A Rust cryptography library for educational purposes"

[dependencies]
SadieFish_encryption = { version = "0.1.1", features = ["aes"] }
rand = "0.8.4"
aes = "0.9.0"

[dev-dependencies]
doc-comment = "0.3.3"

[features]
default = ["SadieFish_encryption"]
caesar = ["SadieFish_encryption_caesar"]
vigenere = ["SadieFish_encryption_vigenere"]
SadieFish_encryption_aes = ["SadieFish_encryption/aes"]
SadieFish_encryption_des = ["SadieFish_encryption/des"]
SadieFish_encryption_rsa = ["SadieFish_encryption/rsa"]
base64 = ["SadieFish_utils/base64"]
hex = ["SadieFish_utils/hex"]
rand = ["SadieFish_utils/rand"]

[workspace]

[build-dependencies]
sadiefish = { path = "." }
