[package]
name = "SadieFish"
version = "0.1.1"
authors = ["Aitzaz Imtiaz <aitzazimtiaz855@gmail.com>"]
repository = "https://github.com/AitSad/SadieFish"
edition = "2018"
description = "A Rust cryptography library for educational purposes"
readme = "README.md"
license = "MIT"

[dependencies]
rand = "0.8.4"
aes = "0.8.2"

[dev-dependencies]
winit = "0.22"

[build-dependencies]
shaderc = "0.6.2"

[workspace]
